# torch-factorization-models

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_implicit_mf.py  test_losses.py  test_torch_factorization_models.py
torch_factorization_models/: implicit_mf.py  losses.py  mf_trainer.py  movielens.py  optimizers.py
