[tool.poetry]
name = "torch-factorization-models"
version = "0.1.0"
description = "Factorization-based models for recommender systems"
authors = ["Karl Higley <kmhigley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
pytorch-lightning = "~0.9.0"
pandas = "^1.1.2"
ranking-metrics-torch = "^0.3.0"
torch_optim_sparse = "^0.1.2"
wandb = "^0.10.4"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^20.8b1"
pre-commit = "^2.7.1"
pylint = "^2.6.0"
hypothesis = "^5.37.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
